--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
       <input  id="clean-type-4" name="cleantypes" value="Moving In/Out" type="radio" />
       <label for="clean-type-4">Moving In/Out</label>
     </form>
+
+    <a href="form.html">Next</a>
   </section>
 
 
-  <script src="js/main.js"></script>
+  <script src=""></script>
 </body>
 </html>
 
