--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <label for="clean-type-4">Moving In/Out</label>
     </form>
 
-    <a href="form.html">Next</a>
+    <a href="">Next</a>
   </section>
 
 
