--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <label for="clean-type-4">Moving In/Out</label>
     </form>
 
-    <a href="">Next</a>
+    <btn>Next</btn>
   </section>
 
 
