--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="countwrap priceCount-wrap">
-      <h6 class="hidden">1</h6>
+      <h6 id="cleanTimeMobile"></h6>
       <h3 id="sumPrice"></h3>
       <p>Subtotal</p>
     </div>
